--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.4",
     "reducer": "^0.19.2",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
